--- a/ex01/views/includes/topnav.pug
+++ b/ex01/views/includes/topnav.pug
@@ -1,14 +1,14 @@
 .header.clearfix
   nav.navbar.navbar-expand-md.navbar-dark.bg-dark.fixed-top
     .container
-      a.navbar-brand(href="/") MJ Overflow
+      a.navbar-brand(href="/") MyTrip
       button.navbar-toggler(type="button", data-toggle="collapse", data-target="#navbarsExampleDefault", aria-controls="navbarsExampleDefault", aria-expanded="false", aria-label="Toggle navigation")
         span.navbar-toggler-icon
 
       #navbarsExampleDefault.collapse.navbar-collapse
         ul.navbar-nav.ml-auto
           li.nav-item
-            a.nav-link(href="/questions") Questions
+            a.nav-link(href="/courses") Courses
           li.nav-item
             a.nav-link(href="/users") Users
           if (!currentUser) 
