--- a/ex01/views/index.pug
+++ b/ex01/views/index.pug
@@ -8,27 +8,46 @@ block content
   .container
     .row.row-cols-1.row-cols-md-3
       .col.mb-4
-        .card.h-100
-          img(src="./public/images/bg.jpg", class = 'card-img-top', alt="...")
+        .card.h-100.text-white.bg-primary
+          img.card-img-top(src="/images/canada.jpg", alt="image", height = "150rem")
           .card-body
-            h5 card-titleCard title
-            p card-tex little bit longer
-  
+            h5 Canada
+            p 
+              | 가이드와 떠나는 캐나다 여행.
+              p 현지인이 운영하는 캐잘알 여행
+              p 부차드 가든 - 다운 타운 - 엠프레스 호텔 - 국회의사당 - 피셔맨스 와프 - 클로버 포인트
+              p 169,463원 / 1인
       .col.mb-4
-        .card.h-100
-          img(src="./public/images/bg.jpg", class = 'card-img-top', alt="...")
+        .card.h-100.text-white.bg-primary
+          img(src="/images/korea.jpg", class = 'card-img-top', alt="...", height = "150rem")
           .card-body
-            h5 card-titleCard title
-            p card-textThis is a short card     
+            h5 Korea
+            p 
+              | 자전거 타고 경복궁투어
+              | 자전거를 타고 600년 전으로 떠나는 시간여행.
+              | 경복궁에서 만나보는 조선 초기의 아름다운 인문학.
+              p 광화문, 흥례문 - 근정전, 근정문 - 사정전 - 강녕전 - 경회루.     
+              p 26,000원 / 1인
       .col.mb-4
-        .card.h-100
-          img(src="./public/images/bg.jpg", class = 'card-img-top', alt="...")
+        .card.h-100.text-white.bg-primary
+          img(src="/images/europe.jpg", class = 'card-img-top', alt="...", height = "150rem")
           .card-body
-            h5 card-titleCard title
-            p card-textThis is a longer card with supporting text below as a natural lead-in to additional content.
+            h5 EU
+            p 
+              | 프라하 트램여행
+              | 트램을 타고 프라하의 골목길을 구경합니다. 트램여행을 하며 프라하를 경험하세요.
+              p 스트라호프 수도원 - 존 레논 벽 - 캠파섬 - 블타바 강변
+              p 299,000 / 1인
       .col.mb-4
-        .card.h-100
-          img(src="./public/images/bg.jpg", class = 'card-img-top', alt="...")
+        .card.h-100.text-white.bg-primary
+          img(src="/images/america.jpg", class = 'card-img-top', alt="...", height = "150rem")
           .card-body
-            h5 card-titleCard title
-            p card-textThis is a longer card with suppot.
+            h5 America
+            p 
+              p 그랜드 캐년 / 파월호 / 앤텔롭 / 홀슈밴드
+              | 미국 서부 최고의 명소 그랜드 캐년 사우스 림. 블랙 캐년 밤하늘의 쏟아지는 별들과
+              | 은하수를 관람하고 베가스로 돌아 옵니다.
+              p 
+              p 193,817원 / 1인
+      
+          
